ci: fix runner npm version and add debug steps

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,24 @@ jobs:
           node-version: 20
           cache: npm
 
+      - name: Check node and npm versions
+        run: |
+          node -v
+          npm -v
+
+      - name: Ensure npm@11
+        run: |
+          npm install -g npm@11
+
+      - name: Check node and npm versions
+        run: |
+          node -v
+          npm -v
+
+      - name: Ensure npm@11
+        run: |
+          npm install -g npm@11
+
       - name: Install dependencies
         run: npm ci
       - name: Build website
