--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -20,6 +20,14 @@ jobs:
           node-version: 20
           cache: npm
 
+      - name: Check node and npm versions
+        run: |
+          node -v
+          npm -v
+
+      - name: Ensure npm@11
+        run: |
+          npm install -g npm@11
       - name: Install dependencies
         run: npm ci
       - name: Test build website
