--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   "dependencies": {
     "@docusaurus/core": "3.9.2",
     "@docusaurus/preset-classic": "3.9.2",
-    "@mdx-js/react": "^3.0.0",
-    "search-insights": "^2.17.3",
-    "clsx": "^2.0.0",
-    "prism-react-renderer": "^2.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@mdx-js/react": "3.0.0",
+    "search-insights": "2.17.3",
+    "clsx": "2.0.0",
+    "prism-react-renderer": "2.3.0",
+    "react": "19.0.1",
+    "react-dom": "19.0.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.9.2",
